fix: make projects-row shadow visible
By giving 3px to the projects-row it lets the box-shadow to be visible.

--- a/src/styles/components/_projectsRow.scss
+++ b/src/styles/components/_projectsRow.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   color: $text-color;
   width: fit-content;
+  padding: 3px;
 
   @include device("mobile") {
     flex-direction: column;
